# CGAssignment

./: CMakeLists.txt  CMakePresets.json  README.md  benchmark.py  benchmark_table.py
shaders/: shader.frag  shader.vert
src/: main.cpp
